# fontbm

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  fontbm.py  main.cpp  notes.txt
.github/: pull_request_template.md
.github/workflows/: cmake.yml  linux_build.yml  mac_build.yml  windows_build.yml
skills/fontbm/: SKILL.md
src/: App.cpp  App.h  CMakeLists.txt  CharList.cpp  CharList.h  Config.h  ConfigFile.cpp  ConfigFile.h  Font.cpp  Font.h  FontInfo.cpp  FontInfo.h  GlyphInfo.h  HelpException.h  IStreamWrapper.h  JsonCommentsInputFilter.h  ProgramOptions.cpp  ProgramOptions.h  ProgramOptionsTest.cpp  catchMain.cpp  main.cpp
src/example/: BmFont.cpp  BmFont.h  BmFontInterface.h  BmFontPrinter.cpp  BmFontPrinter.h  CMakeLists.txt  Example.cpp  FntFileReader.cpp  FntFileReader.h  FntInfo.cpp  FntInfo.h
src/freeType/: FtException.h  FtFace.h  FtFont.h  FtInclude.h  FtLibrary.cpp  FtLibrary.h
src/maxRectsBinPack/: MaxRectsBinPack.cpp  MaxRectsBinPack.h  Rect.h
src/sdlSavePng/: savepng.c  savepng.h
src/tests/: CMakeLists.txt  CharListTest.cpp  FooTest.cpp  TestHelpers.cpp  testing.h
src/tinyxml2/: tinyxml2.cpp  tinyxml2.h
src/utils/: StringMaker.h  extractFileName.h  extractFileNameTest.cpp  getNumberLen.h  getNumberLenTest.cpp  splitStrByDelim.cpp  splitStrByDelim.h  splitStrByDelimTest.cpp
testdata/: charList.txt  config.json
tests/: functional_tests.py
tests/expected/: test0.fnt  test1.fnt  test2.fnt  test3.fnt
tests/samples/: sample0.txt
tests/tmp/: test0.fnt
