set(SOURCES
	Example.cpp
	BmFontPrinter.cpp
	BmFont.cpp
)

if(MINGW)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    SET(MINGW32_LIBRARY mingw32 CACHE STRING "mwindows for MinGW")
    FIND_LIBRARY(SDL2MAIN_LIBRARY NAMES SDL2main)
    SET(SDL2PP_LIBRARIES ${MINGW32_LIBRARY} ${SDL2MAIN_LIBRARY} ${SDL2PP_LIBRARIES})
endif(MINGW)

if(MSVC)
	FIND_LIBRARY(SDL2MAIN_LIBRARY NAMES SDL2main)
	SET(SDL2PP_LIBRARIES winmm.lib ${SDL2MAIN_LIBRARY} ${SDL2PP_LIBRARIES})
endif(MSVC)

add_executable(example ${SOURCES})

target_link_libraries(example ${SDL2PP_LIBRARIES} ${Boost_LIBRARIES})
set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")
